fixed spacing in facts

--- a/_sass/facts.scss
+++ b/_sass/facts.scss
@@ -1,7 +1,7 @@
 .facts {
+  width: 100%;
   display: flex;
-  justify-content: space-around;
-  position: relative;
+  justify-content: space-evenly;
   margin-top: 1rem;
   align-items: center;
 }
